# crypto_impact_bot

./: .gitignore  README.md  pyproject.toml  requirements.txt
bot/: database.db  init_bot.py  main.py  setup.py  start.sh
bot/database/: create_session.py  init_database.py
bot/models/: article.py  stocks.py  users.py
bot/scenarios/: monitor_data.py  user_start_monitoring.py
bot/utils/: database_manipulation.py  response_template.py
